LPS-113126 Fix broken style which occurred in the addition of AssetTagSelector

--- a/modules/apps/questions/questions-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/questions/questions-web/src/main/resources/META-INF/resources/css/main.scss
@@ -152,3 +152,12 @@
 .questions-disabled-link {
 	pointer-events: none;
 }
+
+.questions-tag-selector {
+	.form-group {
+		margin-bottom: 1rem;
+		.form-control-tag-group.input-group {
+			padding: 0 1rem;
+		}
+	}
+}
